--- a/main.css
+++ b/main.css
@@ -1371,6 +1371,7 @@ html {
     margin-bottom: 26px;
     font-size: 12px;
     color: #464646;
+    line-height: 1.4;
 }
 .foter1 p:last-child {
     margin-bottom: 100px;
